--- a/Pear/Controllers/New Redesign/Create User/Input Question/ProfileInputQuestionViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/Input Question/ProfileInputQuestionViewController.storyboard
@@ -45,6 +45,9 @@
                                             <constraint firstAttribute="width" secondItem="hBb-aD-Kxg" secondAttribute="height" multiplier="1:1" id="tqu-O8-7OV"/>
                                         </constraints>
                                         <state key="normal" image="icon-cancel-button"/>
+                                        <connections>
+                                            <action selector="cancelButtonClicked:" destination="Olr-3p-iPy" eventType="touchUpInside" id="jVS-3m-bkJ"/>
+                                        </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hYn-6f-O3M">
                                         <rect key="frame" x="277" y="2.5" width="35" height="35"/>
