--- a/Pear/Controllers/Discovery Flow/Discovery Setup VC/DiscoverySetupViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Discovery Setup VC/DiscoverySetupViewController.storyboard
@@ -23,17 +23,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20y-80-bNR">
-                                <rect key="frame" x="47" y="289" width="320" height="85"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="85" id="9wM-I1-uiw"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Join people pearing nearby" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20y-80-bNR">
+                                <rect key="frame" x="47" y="268" width="320" height="24.666666666666686"/>
+                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3mw-RB-jhQ">
-                                <rect key="frame" x="20" y="462" width="374" height="60"/>
+                                <rect key="frame" x="20" y="380.66666666666669" width="374" height="60"/>
                                 <color key="backgroundColor" red="0.58823529409999997" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Ci6-r1-4Fn"/>
@@ -47,14 +44,14 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-smiling" translatesAutoresizingMaskIntoConstraints="NO" id="8Ys-cj-kSh">
-                                <rect key="frame" x="147" y="161" width="120" height="120"/>
+                                <rect key="frame" x="147" y="140" width="120" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="d2v-8N-h0i"/>
                                     <constraint firstAttribute="height" constant="120" id="pUX-9a-H0B"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="55q-8o-ibQ">
-                                <rect key="frame" x="20" y="394" width="374" height="60"/>
+                                <rect key="frame" x="20" y="312.66666666666669" width="374" height="60"/>
                                 <color key="backgroundColor" red="1" green="0.93725490199999995" blue="0.3803921569" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Wg8-Gq-DJS"/>
@@ -77,7 +74,7 @@
                             <constraint firstItem="8Ys-cj-kSh" firstAttribute="centerX" secondItem="o17-z4-iCy" secondAttribute="centerX" id="Xgv-Se-lG4"/>
                             <constraint firstItem="20y-80-bNR" firstAttribute="leading" secondItem="xhg-ns-OH5" secondAttribute="leading" constant="47" id="cuh-Vb-AC2"/>
                             <constraint firstItem="xhg-ns-OH5" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="8Ys-cj-kSh" secondAttribute="trailing" constant="147" id="eiy-ap-eJs"/>
-                            <constraint firstItem="8Ys-cj-kSh" firstAttribute="top" secondItem="xhg-ns-OH5" secondAttribute="top" constant="141" id="pPY-F3-5Ic"/>
+                            <constraint firstItem="8Ys-cj-kSh" firstAttribute="top" secondItem="xhg-ns-OH5" secondAttribute="top" constant="120" id="pPY-F3-5Ic"/>
                             <constraint firstItem="xhg-ns-OH5" firstAttribute="trailing" secondItem="20y-80-bNR" secondAttribute="trailing" constant="47" id="qA9-nT-O2l"/>
                             <constraint firstItem="xhg-ns-OH5" firstAttribute="trailing" secondItem="55q-8o-ibQ" secondAttribute="trailing" constant="20" id="qaP-DK-70Z"/>
                             <constraint firstItem="3mw-RB-jhQ" firstAttribute="top" secondItem="55q-8o-ibQ" secondAttribute="bottom" constant="8" id="rK2-cQ-ijT"/>
