--- a/Pear/Controllers/New Redesign/Finish Setup Flow/Gender/FinishSetupUserGenderViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Finish Setup Flow/Gender/FinishSetupUserGenderViewController.storyboard
@@ -6,12 +6,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Nunito-Regular.ttf">
-            <string>Nunito-Regular</string>
+        <array key="OpenSans-ExtraBold.ttf">
+            <string>OpenSans-ExtraBold</string>
         </array>
     </customFonts>
     <scenes>
@@ -24,13 +25,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What's your gender?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="cng-XD-tc0">
-                                <rect key="frame" x="30" y="95" width="315" height="38.5"/>
-                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="28"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="30" y="218" width="315" height="33"/>
+                                <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JzT-VV-Xuj">
+                                <rect key="frame" x="16" y="30" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="8s5-D0-BLs"/>
+                                    <constraint firstAttribute="width" constant="40" id="d84-JL-Pz2"/>
+                                </constraints>
+                                <state key="normal" image="icon-cancel-button">
+                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelButtonClicked:" destination="bdM-0P-eau" eventType="touchUpInside" id="hBP-im-U5Q"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-genderqueer" translatesAutoresizingMaskIntoConstraints="NO" id="Wm5-gc-k0s">
+                                <rect key="frame" x="131" y="85" width="113" height="113"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="113" id="GUD-qc-EwI"/>
+                                    <constraint firstAttribute="width" secondItem="Wm5-gc-k0s" secondAttribute="height" multiplier="1:1" id="qds-tU-aV6"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 of 5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wEq-am-yqb">
+                                <rect key="frame" x="165.5" y="39" width="44" height="22"/>
+                                <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9BP-XK-h7W">
-                                <rect key="frame" x="20" y="535" width="335" height="50"/>
+                                <rect key="frame" x="20" y="345" width="335" height="50"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="d4h-7j-zXt"/>
@@ -40,15 +67,8 @@
                                     <action selector="chooseGenderButtonClicked:" destination="bdM-0P-eau" eventType="touchUpInside" id="JeI-73-3RB"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-gender-female" translatesAutoresizingMaskIntoConstraints="NO" id="D0C-9e-wf0">
-                                <rect key="frame" x="28" y="545" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="MVu-re-Fdt"/>
-                                    <constraint firstAttribute="height" constant="30" id="h80-Tn-9bf"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lJB-Dt-53A">
-                                <rect key="frame" x="20" y="473" width="335" height="50"/>
+                                <rect key="frame" x="20" y="283" width="335" height="50"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="sW3-9D-l9h"/>
@@ -58,15 +78,8 @@
                                     <action selector="chooseGenderButtonClicked:" destination="bdM-0P-eau" eventType="touchUpInside" id="Cap-pt-DMC"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-gender-male" translatesAutoresizingMaskIntoConstraints="NO" id="hAH-9q-JT8">
-                                <rect key="frame" x="28" y="483" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="3ou-tc-wIx"/>
-                                    <constraint firstAttribute="width" constant="30" id="RlH-Mq-MwO"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J2v-yn-f4e">
-                                <rect key="frame" x="20" y="597" width="335" height="50"/>
+                                <rect key="frame" x="20" y="407" width="335" height="50"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="bSI-zw-JUS"/>
@@ -76,40 +89,14 @@
                                     <action selector="chooseGenderButtonClicked:" destination="bdM-0P-eau" eventType="touchUpInside" id="7xx-qt-y5K"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-gender-nonbinary" translatesAutoresizingMaskIntoConstraints="NO" id="965-eM-NoI">
-                                <rect key="frame" x="28" y="607" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="2vZ-Rg-10A"/>
-                                    <constraint firstAttribute="width" constant="30" id="mLi-DU-41C"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JzT-VV-Xuj">
-                                <rect key="frame" x="16" y="30" width="40" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="8s5-D0-BLs"/>
-                                    <constraint firstAttribute="width" constant="40" id="d84-JL-Pz2"/>
-                                </constraints>
-                                <state key="normal" image="onboarding-back-button">
-                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="cancelButtonClicked:" destination="bdM-0P-eau" eventType="touchUpInside" id="hBP-im-U5Q"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-gender" translatesAutoresizingMaskIntoConstraints="NO" id="Wm5-gc-k0s">
-                                <rect key="frame" x="162.5" y="25" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="GUD-qc-EwI"/>
-                                    <constraint firstAttribute="width" secondItem="Wm5-gc-k0s" secondAttribute="height" multiplier="1:1" id="qds-tU-aV6"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="preferencesBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="s44-GL-WtE" firstAttribute="trailing" secondItem="lJB-Dt-53A" secondAttribute="trailing" constant="20" id="1lX-6e-zfl"/>
                             <constraint firstItem="JzT-VV-Xuj" firstAttribute="leading" secondItem="s44-GL-WtE" secondAttribute="leading" constant="16" id="6Ga-ey-kxK"/>
                             <constraint firstItem="cng-XD-tc0" firstAttribute="top" secondItem="Wm5-gc-k0s" secondAttribute="bottom" constant="20" id="7eb-jo-H35"/>
-                            <constraint firstItem="s44-GL-WtE" firstAttribute="bottom" secondItem="J2v-yn-f4e" secondAttribute="bottom" constant="20" id="8yZ-DL-W1A"/>
+                            <constraint firstItem="wEq-am-yqb" firstAttribute="centerY" secondItem="JzT-VV-Xuj" secondAttribute="centerY" id="Bvr-F3-ell"/>
+                            <constraint firstItem="Wm5-gc-k0s" firstAttribute="top" secondItem="wEq-am-yqb" secondAttribute="bottom" constant="24" id="EHX-Nl-0JT"/>
                             <constraint firstItem="lJB-Dt-53A" firstAttribute="leading" secondItem="s44-GL-WtE" secondAttribute="leading" constant="20" id="EbJ-ja-wGK"/>
                             <constraint firstItem="s44-GL-WtE" firstAttribute="trailing" secondItem="9BP-XK-h7W" secondAttribute="trailing" constant="20" id="Gkv-xE-8zx"/>
                             <constraint firstItem="9BP-XK-h7W" firstAttribute="leading" secondItem="s44-GL-WtE" secondAttribute="leading" constant="20" id="I3V-Yp-BEN"/>
@@ -117,18 +104,13 @@
                             <constraint firstItem="s44-GL-WtE" firstAttribute="trailing" secondItem="cng-XD-tc0" secondAttribute="trailing" constant="30" id="XHH-hL-cmw"/>
                             <constraint firstItem="cng-XD-tc0" firstAttribute="centerX" secondItem="s44-GL-WtE" secondAttribute="centerX" id="aXr-72-Qrm"/>
                             <constraint firstItem="s44-GL-WtE" firstAttribute="trailing" secondItem="J2v-yn-f4e" secondAttribute="trailing" constant="20" id="d0r-Mc-M8d"/>
-                            <constraint firstItem="965-eM-NoI" firstAttribute="centerY" secondItem="J2v-yn-f4e" secondAttribute="centerY" id="e5g-7U-zgS"/>
                             <constraint firstItem="Wm5-gc-k0s" firstAttribute="centerX" secondItem="s44-GL-WtE" secondAttribute="centerX" id="eLc-fo-Q8h"/>
                             <constraint firstItem="9BP-XK-h7W" firstAttribute="top" secondItem="lJB-Dt-53A" secondAttribute="bottom" constant="12" id="fbf-cz-fFy"/>
                             <constraint firstItem="JzT-VV-Xuj" firstAttribute="top" secondItem="s44-GL-WtE" secondAttribute="top" constant="10" id="gmT-yT-K0f"/>
-                            <constraint firstItem="Wm5-gc-k0s" firstAttribute="centerY" secondItem="JzT-VV-Xuj" secondAttribute="centerY" id="jJ2-6q-1vc"/>
                             <constraint firstItem="J2v-yn-f4e" firstAttribute="top" secondItem="9BP-XK-h7W" secondAttribute="bottom" constant="12" id="k3B-fy-7ow"/>
-                            <constraint firstItem="hAH-9q-JT8" firstAttribute="leading" secondItem="lJB-Dt-53A" secondAttribute="leading" constant="8" id="mW5-hO-8iP"/>
-                            <constraint firstItem="D0C-9e-wf0" firstAttribute="leading" secondItem="9BP-XK-h7W" secondAttribute="leading" constant="8" id="oSS-Kr-XVA"/>
-                            <constraint firstItem="hAH-9q-JT8" firstAttribute="centerY" secondItem="lJB-Dt-53A" secondAttribute="centerY" id="qEN-yG-bm9"/>
-                            <constraint firstItem="965-eM-NoI" firstAttribute="leading" secondItem="J2v-yn-f4e" secondAttribute="leading" constant="8" id="tXY-Ce-TVT"/>
-                            <constraint firstItem="D0C-9e-wf0" firstAttribute="centerY" secondItem="9BP-XK-h7W" secondAttribute="centerY" id="tia-RG-b4G"/>
+                            <constraint firstItem="lJB-Dt-53A" firstAttribute="top" secondItem="cng-XD-tc0" secondAttribute="bottom" constant="32" id="ljj-yb-gPS"/>
                             <constraint firstItem="cng-XD-tc0" firstAttribute="leading" secondItem="s44-GL-WtE" secondAttribute="leading" constant="30" id="zeB-jp-Mcr"/>
+                            <constraint firstItem="wEq-am-yqb" firstAttribute="centerX" secondItem="s44-GL-WtE" secondAttribute="centerX" id="zfp-Rl-egX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="s44-GL-WtE"/>
                     </view>
@@ -144,10 +126,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-back-button" width="170.66667175292969" height="170.66667175292969"/>
-        <image name="onboarding-icon-gender" width="512" height="512"/>
-        <image name="onboarding-icon-gender-female" width="128" height="128"/>
-        <image name="onboarding-icon-gender-male" width="128" height="128"/>
-        <image name="onboarding-icon-gender-nonbinary" width="128" height="128"/>
+        <image name="icon-cancel-button" width="96" height="96"/>
+        <image name="icons8-genderqueer" width="512" height="512"/>
+        <namedColor name="preferencesBackgroundColor">
+            <color red="0.37999999523162842" green="0.77999997138977051" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
